# MessengerAPP

./: Cargo.toml  README.md  Storage.rs  auth.rs  chat.rs  main.rs  network.rs  settings.rs  types.rs  ui.rs
server/server-raw-files/: SERVEREND.go  go.mod  go.sum
src/: Storage.rs  crypto.rs  main.rs
ui/: components.rs  main.rs  sidebar.rs
