[package]
name = "private-messenger-client"
version = "1.0.0"
edition = "2024"


[[bin]]
name = "messenger_client"
path = "src/main.rs"

[dependencies]
# GUI
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
egui-notify = "0.15"

# Networking
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
image = "0.25"
rfd = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Media handling
rodio = "0.19"
webrtc = "0.11"
url = "2.5.7"
tokio-util = "0.7.17"
argon2 = "0.5.3"

fxhash = "0.2"
argon2 = { version = "0.5", features = ["std"] }
ring = "0.17"
rand = "0.8"
argon2 = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
